added auth and some edites in swagger
